--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,25 @@ reset
 
 *{
     margin: 0;
-    padding: ;
+    padding: 0;
     box-sizing: border-box;
     font-family: "Fredoka", sans-serif;
 }
-
-
 
  /* 
  general
   */
 
   body{
-    background-color: rgb(236, 118, 21);
+    background-color: rgb(246, 237, 231);
   }
 
   .coontainer{
     max-width: 1000px;
+    min-height: 800px;
     margin: auto;
     background-color: white;
   }
-
   
   /* 
   header
@@ -56,7 +54,7 @@ reset
 
    .card{
     background-color:#0F0E17;
-    width: calc(100% /3 - 40px) ;
+    width: calc(100% /3 - 40px ) ;
     height: 88px;
     float: left;
     margin: 20px;
@@ -84,5 +82,6 @@ reset
     text-decoration: none;
  }
 
-   
+
+ PROVAAAAAAAAAAA
 
